--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
 install:
-  - ./travis-tool.sh r_install RUnit inline Rcpp testthat
+  - ./travis-tool.sh r_install RUnit inline testthat
+  - ./travis-tool.sh install_github RcppCore/Rcpp
 after_script:
   - ./travis-tool.sh dump_logs
 notifications:
