--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 install:
   - ./travis-tool.sh r_install RUnit inline testthat
-  - ./travis-tool.sh install_github RcppCore/Rcpp
+  - ./travis-tool.sh github_package RcppCore/Rcpp
 after_script:
   - ./travis-tool.sh dump_logs
 notifications:
