--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,26 @@
 # and checking '--as-cran'.
 
 language: c
+#
 script: ./travis-tool.sh run_tests
+#
+#
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+#
+#
 install:
-  - ./travis-tool.sh r_install RUnit inline Rcpp testthat
+  - ./travis-tool.sh r_install RUnit inline testthat Rcpp
+# Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
+#  - ./travis-tool.sh github_package RcppCore/Rcpp
+#
+#
 after_script:
   - ./travis-tool.sh dump_logs
+#
+#
 notifications:
   email:
     on_success: change
@@ -29,11 +40,4 @@ env:
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
 # See the travis docs for more information:
 #   http://about.travis-ci.org/docs/user/build-configuration/#The-Build-Matrix
-
-
-# Also works but is slower as it needs devtools:
-# - ./travis-tool.sh install_deps
-
-# Currently unused (and GSL used for illustration)
-#  - ./travis-tool.sh aptget_install libgsl0-dev
 
