--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,32 @@
 # Sample .travis.yml for R projects.
 #
 # See https://github.com/craigcitro/r-travis
-#
-# Running with default settings which for now means 'no manual, no vignettes'
-# and checking '--as-cran'.
+
 
 language: c
-#
-script: ./travis-tool.sh run_tests
-#
-#
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-#
-#
-install:
-  - ./travis-tool.sh r_install RUnit inline testthat Rcpp
-# Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
-#  - ./travis-tool.sh github_package RcppCore/Rcpp
-#
-#
-after_script:
-  - ./travis-tool.sh dump_logs
-#
-#
-notifications:
-  email:
-    on_success: change
-    on_failure: change
 
-# Options used for building or testing your R package can be
-# controlled by uncommenting one or both of the following; the values
-# here are the defaults:
 env:
   global:
     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
-# See the travis docs for more information:
-#   http://about.travis-ci.org/docs/user/build-configuration/#The-Build-Matrix
+
+script: ./travis-tool.sh run_tests
+
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+
+install:
+  - ./travis-tool.sh install_r RUnit inline testthat Rcpp
+# Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
+#  - ./travis-tool.sh github_package RcppCore/Rcpp
+
+after_script:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
 
