--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: RcppEigen
 Type: Package
 Title: Rcpp integration for the Eigen templated linear algebra library.
-Version: 0.3.2.0
-Date: 2013-11-13
+Version: 0.3.2.0.1
+Date: 2013-12-16
 Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel
-Maintainer: Douglas Bates <bates@stat.wisc.edu>
+Maintainer: Dirk Eddelbuettel <edd@debian.org>
+Copyright: See the file COPYRIGHTS for various Eigen copyright details
 Description: R and Eigen integration using Rcpp.
  .
  Eigen is a C++ template library for linear algebra: matrices,
