more accomodation of CRAN requests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Type: Package
 Title: Rcpp integration for the Eigen templated linear algebra library.
 Version: 0.3.2.0.1
 Date: 2013-12-16
-Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel
+Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel; 
+ the authors of Eigen for the included version of Eigen
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Copyright: See the file COPYRIGHTS for various Eigen copyright details
 Description: R and Eigen integration using Rcpp.
@@ -23,7 +24,7 @@ Description: R and Eigen integration using Rcpp.
  under the GNU GPL version 2 or later.  RcppEigen (the Rcpp
  bindings/bridge to Eigen) is licensed under the GNU GPL version 2 or
  later, as is the rest of Rcpp.
-License: GPL (>= 2)
+License: GPL (>= 2) | file LICENSE
 Depends: R(>= 2.15.1)
 LazyLoad: yes
 LinkingTo: Rcpp
