--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@
 #
 # See https://github.com/craigcitro/r-travis
 
-
 language: c
 
 env:
@@ -10,7 +9,8 @@ env:
     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
 
-script: ./travis-tool.sh run_tests
+script: 
+  - ./travis-tool.sh run_tests
 
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
@@ -18,12 +18,12 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_r RUnit inline testthat Rcpp
+  - ./travis-tool.sh install_r RUnit inline Rcpp
 # Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
-#  - ./travis-tool.sh github_package RcppCore/Rcpp
+#  - ./travis-tool.sh install_github RcppCore/Rcpp
 
-after_script:
-  - ./travis-tool.sh dump_logs
+#after_script:
+#  - ./travis-tool.sh dump_logs
 
 notifications:
   email:
