--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,13 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_r RUnit inline Rcpp
+  - ./travis-tool.sh install_aptget r-cran-runit
+  - ./travis-tool.sh install_r inline Rcpp
 # Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
 #  - ./travis-tool.sh install_github RcppCore/Rcpp
 
-#after_script:
-#  - ./travis-tool.sh dump_logs
+after_failure:
+  - ./travis-tool.sh dump_logs
 
 notifications:
   email:
