small changes forced upon the package by Rcpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ importClassesFrom("Matrix"
                   , dtCMatrix
                   )
 
+importFrom(Rcpp, evalCpp)
+
 #exportPattern("^[[:alpha:]]+")
 export(fastLm,
        fastLmPure,
