--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: r-cran-rcppeigen
 Section: gnu-r
 Priority: optional
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Build-Depends: debhelper (>= 7.0.0), r-base-dev (>= 3.0.3), cdbs, r-cran-rcpp, r-cran-matrix (>= 1.1-0)
+Build-Depends: debhelper (>= 7.0.0), r-base-dev (>= 3.1.0), cdbs, r-cran-rcpp (>= 0.11.0-1), r-cran-matrix (>= 1.1-0)
 Standards-Version: 3.9.5
 
 Package: r-cran-rcppeigen
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${R:Depends}, r-cran-rcpp, r-cran-matrix (>= 1.1-0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${R:Depends}, r-cran-rcpp (>= 0.11.0-1), r-cran-matrix (>= 1.1-0)
 Description: GNU R package for Eigen templated linear algebra
  Eigen is a C++ template library for linear algebra: matrices, vectors,
  numerical solvers and related algorithms.  It supports dense
