--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: r-cran-rcppeigen
 Section: gnu-r
 Priority: optional
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Build-Depends: debhelper (>= 7.0.0), r-base-dev (>= 3.1.0), cdbs, r-cran-rcpp (>= 0.11.0-1), r-cran-matrix (>= 1.1-0)
+Build-Depends: debhelper (>= 7.0.0), r-base-dev (>= 3.1.0), cdbs, r-cran-rcpp (>= 0.11.0), r-cran-matrix (>= 1.1-0)
 Standards-Version: 3.9.5
 
 Package: r-cran-rcppeigen
