--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+  - sudo add-apt-repository -y ppa:edd/misc
+  - sudo apt-get update -q
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-runit
-  - ./travis-tool.sh install_r inline Rcpp
+  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-matrix r-cran-inline r-cran-runit 
+# - ./travis-tool.sh install_r inline Rcpp
 # Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
 #  - ./travis-tool.sh install_github RcppCore/Rcpp
 
