also add pkgKitten to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 install:
   - ./travis-tool.sh install_aptget r-cran-runit
-  - ./travis-tool.sh install_r inline Rcpp
+  - ./travis-tool.sh install_r inline Rcpp pkgKitten
 # Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
 #  - ./travis-tool.sh install_github RcppCore/Rcpp
 
