--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RcppEigen
 Type: Package
-Title: Rcpp integration for the Eigen templated linear algebra library.
+Title: Rcpp Integration for the Eigen Templated Linear Algebra Library
 Version: 0.3.2.3.2
 Date: 2015-02-23
 Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel; 
