--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,28 +1,28 @@
 Package: RcppEigen
 Type: Package
-Title: Rcpp Integration for the Eigen Templated Linear Algebra Library
+Title: 'Rcpp' Integration for the 'Eigen' Templated Linear Algebra Library
 Version: 0.3.2.5.0
 Date: 2015-07-11
 Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel; 
  the authors of Eigen for the included version of Eigen
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Copyright: See the file COPYRIGHTS for various Eigen copyright details
-Description: R and Eigen integration using Rcpp.
- Eigen is a C++ template library for linear algebra: matrices,
+Description: R and 'Eigen' integration using 'Rcpp'.
+ 'Eigen' is a C++ template library for linear algebra: matrices,
  vectors, numerical solvers and related algorithms.  It supports dense
  and sparse matrices on integer, floating point and complex numbers,
  decompositions of such matrices, and solutions of linear systems. Its
  performance on many algorithms is comparable with some of the best
- implementations based on Lapack and level-3 BLAS.
+ implementations based on 'Lapack' and level-3 'BLAS'.
  .
- The RcppEigen package includes the header files from the Eigen C++
+ The 'RcppEigen' package includes the header files from the 'Eigen' C++
  template library (currently version 3.2.5). Thus users do not need to
- install Eigen itself in order to use RcppEigen.
+ install 'Eigen' itself in order to use 'RcppEigen'.
  .
- Since version 3.1.1, Eigen is licensed under the Mozilla Public License
+ Since version 3.1.1, 'Eigen' is licensed under the Mozilla Public License
  (version 2); earlier version were licensed under the GNU LGPL version 3 or
- later. RcppEigen (the Rcpp bindings/bridge to Eigen) is licensed under the
- GNU GPL version 2 or later, as is the rest of Rcpp.
+ later. 'RcppEigen' (the 'Rcpp' bindings/bridge to 'Eigen') is licensed under
+ the GNU GPL version 2 or later, as is the rest of 'Rcpp'.
 License: GPL (>= 2) | file LICENSE
 Depends: R (>= 2.15.1)
 LazyLoad: yes
