--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: RcppEigen
 Type: Package
 Title: 'Rcpp' Integration for the 'Eigen' Templated Linear Algebra Library
-Version: 0.3.2.5.0.1
-Date: 2015-09-21
-Author: Douglas Bates, Romain Francois and Dirk Eddelbuettel; 
+Version: 0.3.2.5.1
+Date: 2015-09-23
+Author: Douglas Bates, Dirk Eddelbuettel and Romain Francois; 
  the authors of Eigen for the included version of Eigen
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Copyright: See the file COPYRIGHTS for various Eigen copyright details
