--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,8 @@ useDynLib(RcppEigen)
 
 importClassesFrom("Matrix", "dgCMatrix", "dgeMatrix", "dsCMatrix", "dtCMatrix")
 importFrom(Rcpp, "evalCpp")
-importFrom(utils, "packageDescription")
+importFrom(utils, "packageDescription", "package.skeleton")
 importFrom(stats, "model.frame", "model.matrix", "model.response", "fitted", "coef", "printCoefmat", "pt")
-
 #exportPattern("^[[:alpha:]]+")
 export(fastLm,
        fastLmPure,
