--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,18 +1,17 @@
-useDynLib(RcppEigen)
+useDynLib("RcppEigen", .registration=TRUE)
 
 importClassesFrom("Matrix", "dgCMatrix", "dgeMatrix", "dsCMatrix", "dtCMatrix")
-importFrom(Rcpp, "evalCpp")
-importFrom(utils, "packageDescription", "package.skeleton")
-importFrom(stats, "model.frame", "model.matrix", "model.response", "fitted", "coef", "printCoefmat", "pt")
-#exportPattern("^[[:alpha:]]+")
-export(fastLm,
-       fastLmPure,
-       RcppEigen.package.skeleton
+importFrom("Rcpp", "evalCpp")
+importFrom("utils", "packageDescription", "package.skeleton")
+importFrom("stats", "model.frame", "model.matrix", "model.response", "fitted", "coef", "printCoefmat", "pt")
+export("fastLm",
+       "fastLmPure",
+       "RcppEigen.package.skeleton"
        )
 
-S3method(fastLm, default)
-S3method(fastLm, formula)
-S3method(predict, fastLm)
-S3method(print, fastLm)
-S3method(summary, fastLm)
-S3method(print, summary.fastLm)
+S3method("fastLm", "default")
+S3method("fastLm", "formula")
+S3method("predict", "fastLm")
+S3method("print", "fastLm")
+S3method("summary", "fastLm")
+S3method("print", "summary.fastLm")
