--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,28 @@
-# Sample .travis.yml for R projects.
-#
-# See https://github.com/craigcitro/r-travis
-#     https://github.com/eddelbuettel/r-travis/
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
-env:
-  global:
-    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
+sudo: required
 
-script: 
-  - ./travis-tool.sh run_tests
+dist: trusty
 
 before_install:
-  - curl -OL http://raw.github.com/eddelbuettel/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-  - sudo add-apt-repository -y ppa:edd/misc
-  - sudo apt-get update -q
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # add our launchpad repo which has additional packages -- not needed here
+  # - sudo add-apt-repository -y ppa:edd/misc
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-matrix r-cran-inline r-cran-runit r-cran-pkgkitten
-# Note: if Rcpp from Github is needed, use following line and remove Rcpp from previous line
-#  - ./travis-tool.sh install_github RcppCore/Rcpp
+  - ./run.sh install_aptget r-cran-rcpp r-cran-matrix r-cran-inline r-cran-runit r-cran-pkgkitten
+
+script: 
+  - ./run.sh run_tests
+
+#after_success:
+#  - ./run.sh coverage
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
