--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,23 +2,20 @@ Package: RcppEigen
 Type: Package
 Title: 'Rcpp' Integration for the 'Eigen' Templated Linear Algebra Library
 Version: 0.3.3.3.0
-Date: 2017-04-27
+Date: 2017-04-29
 Author: Douglas Bates, Dirk Eddelbuettel, Romain Francois, and Yixuan Qiu;
  the authors of Eigen for the included version of Eigen
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Copyright: See the file COPYRIGHTS for various Eigen copyright details
 Description: R and 'Eigen' integration using 'Rcpp'.
- 'Eigen' is a C++ template library for linear algebra: matrices,
- vectors, numerical solvers and related algorithms.  It supports dense
- and sparse matrices on integer, floating point and complex numbers,
- decompositions of such matrices, and solutions of linear systems. Its
- performance on many algorithms is comparable with some of the best
- implementations based on 'Lapack' and level-3 'BLAS'.
- .
- The 'RcppEigen' package includes the header files from the 'Eigen' C++
- template library (currently version 3.3.3). Thus users do not need to
- install 'Eigen' itself in order to use 'RcppEigen'.
- .
+ 'Eigen' is a C++ template library for linear algebra: matrices, vectors,
+ numerical solvers and related algorithms.  It supports dense and sparse
+ matrices on integer, floating point and complex numbers, decompositions of
+ such matrices, and solutions of linear systems. Its performance on many
+ algorithms is comparable with some of the best implementations based on
+ 'Lapack' and level-3 'BLAS'. The 'RcppEigen' package includes the header
+ files from the 'Eigen' C++ template library (currently version 3.3.3). Thus
+ users do not need to install 'Eigen' itself in order to use 'RcppEigen'.
  Since version 3.1.1, 'Eigen' is licensed under the Mozilla Public License
  (version 2); earlier version were licensed under the GNU LGPL version 3 or
  later. 'RcppEigen' (the 'Rcpp' bindings/bridge to 'Eigen') is licensed under
