--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,3 @@
-patch/*
 vignettes/jss835
 vignettes/RcppEigen-intro-nojss.*
 NEWS.org
@@ -8,3 +7,4 @@ debian
 ^.*\.Rproj$
 ^\.Rproj\.user$
 .*\.tar\.gz$
+^patches/
