Condition benchmarking on microbenchmark package
- Move benchmark script into a
  `if(require("microbenchmark"))` block
  so script works even if microbenchmark
  is not installed
- Add microbenchmark to `Suggests`
- Add r-cran-microbenchmark to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_install:
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-matrix r-cran-inline r-cran-runit r-cran-pkgkitten
+  - ./run.sh install_aptget r-cran-rcpp r-cran-matrix r-cran-inline r-cran-runit r-cran-pkgkitten r-cran-microbenchmark
 
-script: 
+script:
   - ./run.sh run_tests
 
 #after_success:
@@ -28,4 +28,3 @@ notifications:
   email:
     on_success: change
     on_failure: change
-
