tinytest conversion step three: convert runner, use tinytest

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,6 @@ Depends: R (>= 2.15.1)
 LazyLoad: yes
 LinkingTo: Rcpp
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.0), stats, utils
-Suggests: inline, RUnit, pkgKitten, microbenchmark
+Suggests: inline, tinytest, pkgKitten, microbenchmark
 URL: http://dirk.eddelbuettel.com/code/rcpp.eigen.html
 BugReports: https://github.com/RcppCore/RcppEigen/issues
