add GitHub repo to URL field

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,5 @@ LazyLoad: yes
 LinkingTo: Rcpp
 Imports: Matrix (>= 1.1-0), Rcpp (>= 0.11.0), stats, utils
 Suggests: inline, tinytest, pkgKitten, microbenchmark
-URL: http://dirk.eddelbuettel.com/code/rcpp.eigen.html
+URL: https://github.com/RcppCore/RcppEigen, https://dirk.eddelbuettel.com/code/rcpp.eigen.html
 BugReports: https://github.com/RcppCore/RcppEigen/issues
