--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(person("Doug", "Bates", role = "aut",
              person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Romain", "Francois", role = "aut",
-                    comment = c(ORDID = "0000-0002-2444-4226")),
+                    comment = c(ORCID = "0000-0002-2444-4226")),
              person("Yixuan", "Qiu", role = "aut",
-                    comment = c(ORDID = "0000-0003-0109-6692")),
+                    comment = c(ORCID = "0000-0003-0109-6692")),
              person("Authors of", "Eigen", role = "cph",
                     comment = "Authorship and copyright in included Eigen library as detailed in inst/COPYRIGHTS"))
 Copyright: See the file COPYRIGHTS for various Eigen copyright details
