Export and document threading helpers

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,3 +35,4 @@ Imports: Rcpp (>= 0.11.0), stats, utils
 Suggests: Matrix, inline, tinytest, pkgKitten, microbenchmark
 URL: https://github.com/RcppCore/RcppEigen, https://dirk.eddelbuettel.com/code/rcpp.eigen.html
 BugReports: https://github.com/RcppCore/RcppEigen/issues
+RoxygenNote: 6.0.1
