--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RcppEigen
 Type: Package
 Title: 'Rcpp' Integration for the 'Eigen' Templated Linear Algebra Library
-Version: 0.3.4.0.2.1
-Date: 2025-08-26
+Version: 0.4.9.8-0
+Date: 2025-12-28
 Authors@R: c(person("Doug", "Bates", role = "aut",
                     comment = c(ORCID = "0000-0001-8316-9503")),
              person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
@@ -35,3 +35,4 @@ Imports: Rcpp (>= 0.11.0), stats, utils
 Suggests: Matrix, inline, tinytest, pkgKitten, microbenchmark
 URL: https://github.com/RcppCore/RcppEigen, https://dirk.eddelbuettel.com/code/rcpp.eigen.html
 BugReports: https://github.com/RcppCore/RcppEigen/issues
+RoxygenNote: 6.0.1
