--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         include:
-          #- {os: macOS-latest}
+          - {os: macOS-latest}
           - {os: ubuntu-latest}
 
     runs-on: ${{ matrix.os }}
@@ -31,6 +31,10 @@ jobs:
 
       - name: Test
         run: ./run.sh run_tests
+
+      - name: Verify OpenMP on macOS
+        if: ${{ matrix.os == 'macOS-latest' }}
+        run: R CMD INSTALL . && Rscript -e 'RcppEigen::EigenNbThreads()'
 
       - name: Coverage
         if: ${{ matrix.os == 'ubuntu-latest' }}
